--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="senape">#FFE118</color>
     <color name="tabs_background">#E2F6F7</color>
     <color name="fragment_title">#425688</color>
+    <color name="fragment_title_darker">#222668</color>
 
 </resources>
