--- a/EclipseProg/Scouthis/res/layout/alarms_wake_user.xml
+++ b/EclipseProg/Scouthis/res/layout/alarms_wake_user.xml
@@ -1,40 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-<FrameLayout 
-     xmlns:android="http://schemas.android.com/apk/res/android" 
-	 android:layout_width="fill_parent" android:layout_height="fill_parent">
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/sky" />
 
-	  <ImageView
-	      android:layout_width="fill_parent"
-	      android:layout_height="fill_parent"
-	      android:scaleType="centerCrop"
-	      android:src="@drawable/sky" />
-	
-	<RelativeLayout
-	    android:id="@+id/llBirdEscape"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    
-	     >
+    <RelativeLayout
+        android:id="@+id/llBirdEscape"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-	    <ImageView
-	        android:id="@+id/imgBird"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/wake_txt_explain"
-	        android:src="@drawable/bird_cardellino" />
-	
-	    <TextView
-	        android:id="@+id/wake_txt_explain"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_centerHorizontal="true"
-	        android:layout_centerVertical="true"
-	        android:layout_margin="@dimen/fragment_border_side"
-	        android:text="Tocca il cardellino per farlo tacere!"
-	        android:textAppearance="?android:attr/textAppearanceLarge"
-	        android:textColor="@color/fragment_title_darker"
-	        android:textSize="30sp" />
+        <ImageView
+            android:id="@+id/imgBird"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/wake_txt_explain"
+            android:src="@drawable/bird_cardellino" />
 
-	</RelativeLayout>
+        <TextView
+            android:id="@+id/wake_txt_explain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:layout_margin="@dimen/fragment_border_side"
+            android:text="Tocca il cardellino per farlo tacere!"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/fragment_title_darker"
+            android:textSize="30sp" />
+    </RelativeLayout>
+
 </FrameLayout>
