--- a/EclipseProg/Scouthis/res/values/strings_fragments.xml
+++ b/EclipseProg/Scouthis/res/values/strings_fragments.xml
@@ -37,13 +37,15 @@
     <string name="gps_direction">Direzione</string>
     
     <!-- Strings related to stepcounter fragment  -->
-    <string name="stepcounter_gohome">Torna alla Home del Contapassi</string>
+    <string name="stepcounter_gohome">Torna al Contapassi</string>
     <string name="stepcounter_newrun">Nuova corsa</string>
     <string name="stepcounter_seehistory">Vedi storico</string>
     <string name="stepcounter_statistic">Statistiche corsa</string>
     <string name="stepcounter_steps_done">Passi effettuati</string>
     <string name="stepcounter_distance_done">Distanza percorsa</string>
     <string name="stepcounter_speed_medium">Velocità media</string>
+    <string name="stepcounter_speed">Velocità:</string>
+    <string name="stepcounter_distance">Distanza:</string>
     <string name="stepcounter_time_passed">Tempo trascorso</string>
     
     <!-- Strings related to findfriends fragment  -->
