--- a/EclipseProg/Scouthis/res/drawable-hdpi/list_selector.xml
+++ b/EclipseProg/Scouthis/res/drawable-hdpi/list_selector.xml
@@ -6,8 +6,8 @@
     android:state_pressed="false" 
     android:drawable="@drawable/gradient_bg" />
 <item android:state_pressed="true" 
-    android:drawable="@drawable/gradient_bg_hover" />
+    android:drawable="@drawable/gradient_bg" />
 <item android:state_selected="true"
  android:state_pressed="false" 
-    android:drawable="@drawable/gradient_bg_hover" />
+    android:drawable="@drawable/gradient_bg" />
 </selector>
