--- a/EclipseProg/Scouthis/res/layout/activity_main.xml
+++ b/EclipseProg/Scouthis/res/layout/activity_main.xml
@@ -16,5 +16,6 @@
 
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
+    android:layout_marginLeft="5dip"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
