--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -7,7 +7,14 @@
     <color name="button_background">#db555555</color>
     <color name="button_background_pressed">#858585</color>
     <color name="coral_light">#F08080</color>
-    <color name="azure">#00FFFF</color>
+    <color name="azure">#4CA5FF</color>
+    <color name="azure_light">#E0FFFF</color>
+    
+    <color name="azure_trasp">#704CA5FF</color>
+    <color name="azure_light_trasp">#705CB5FF</color>
+    
+    
+    
     <color name="orange_ligh">#FFE4C4</color>
     <color name="maroon">#800000</color>
     <color name="alarm_day_colour">#3080A2</color>
