--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="btn_background">#4CA5FF</color>
     <color name="btn_background_traspar">#704CA5FF</color>
     <color name="color_blue1">#0094FF</color>
+    <color name="saddle">#8B4513</color>
     <color name="pergamena">#FFFFC2</color>
     <color name="lightbrown">#F5DEB3</color>
     <color name="senape">#FFE118</color>
