--- a/EclipseProg/Scouthis/res/layout/fragment_section_alert_user_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alert_user_gps.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/alert_gps_container"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:padding="5dp" >
 
     <TextView
         android:id="@+id/alert_warn_message"
