--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_marginTop="-60dp"
-    android:layout_margin="@dimen/fragment_border_side"
+    android:layout_margin="@dimen/fragment_margin"
     android:gravity="center"
     android:orientation="vertical" >
     <RelativeLayout 
