--- a/EclipseProg/Scouthis/res/layout/alarms_wake_user.xml
+++ b/EclipseProg/Scouthis/res/layout/alarms_wake_user.xml
@@ -28,7 +28,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:gravity="center"
-            android:layout_margin="@dimen/fragment_border_side"
+            android:layout_margin="@dimen/fragment_margin"
             android:text="Tocca il cardellino per farlo tacere!"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/fragment_title_darker"
