--- a/EclipseProg/Scouthis/res/layout/fragment_section_alarms_set_clock.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alarms_set_clock.xml
@@ -5,7 +5,7 @@
     
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/fragment_border_side"
+    android:layout_margin="@dimen/fragment_margin"
     tools:context=".AlarmsSetClockFragment" >
 
     <TextView
