--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -2,8 +2,8 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    
-    android:layout_margin="@dimen/fragment_border_side" >
+    android:layout_margin="@dimen/fragment_margin"
+    android:padding="@dimen/fragment_padding" >
 
     <LinearLayout
         android:id="@+id/gps_alert_container"
