--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
@@ -2,7 +2,7 @@
 <RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/step_history_outer"
-    android:layout_margin="@dimen/fragment_border_side"
+    android:layout_margin="@dimen/fragment_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     xmlns:app="http://schemas.android.com/apk/res-auto">
