--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
@@ -4,7 +4,7 @@
     android:id="@+id/step_alert_gps_container_out"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="@dimen/fragment_border_side"
+    android:layout_margin="@dimen/fragment_margin"
     android:orientation="vertical" >
 
     <LinearLayout
