--- a/EclipseProg/Scouthis/res/values/dimens.xml
+++ b/EclipseProg/Scouthis/res/values/dimens.xml
@@ -10,13 +10,12 @@
     <dimen name="divider_margin">8dp</dimen>
     <dimen name="button_drawable_padding">12dp</dimen>
     <dimen name="button_corner_radius">24dp</dimen>
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
     
     <dimen name="small_text">12dp</dimen>
     
     <dimen name="fragment_title">20sp</dimen>
-    <dimen name="fragment_border_side">5dp</dimen>
+    <dimen name="fragment_margin">0dp</dimen>
+    <dimen name="fragment_padding">5dp</dimen>
     <dimen name="fragment_border_top">5dp</dimen>
     
 </resources>
