--- a/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
@@ -2,8 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="5dp"
-    android:layout_margin="0dp" >
+    android:layout_margin="@dimen/fragment_margin"
+    android:padding="@dimen/fragment_padding"  >
 
     <RelativeLayout
         android:id="@+id/newsfeedTopLayout"
