--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/step_alert_gps_container_out"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="@dimen/fragment_margin"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="@dimen/fragment_padding" >
 
     <LinearLayout
         android:id="@+id/step_alert_gps_container"
@@ -19,8 +20,8 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/step_statistics_table"
         android:layout_alignParentTop="true"
-		android:layout_above="@+id/step_statistics_table"
         android:layout_marginBottom="5dp" />
 
     <it.poli.android.scoutthisme.tools.CircleButton
@@ -28,14 +29,14 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="2dp"
         android:scaleType="fitCenter"
         android:src="@drawable/bandiera_scacchi"
         app:cb_color="@color/btn_background_traspar"
         app:cb_percent_down="50"
         app:cb_percent_left="50"
-        app:cb_percent_scale="50"
-        android:layout_marginTop="2dp"
-        android:layout_marginRight="2dp" />
+        app:cb_percent_scale="50" />
 
     <TableLayout
         android:id="@+id/step_statistics_table"
