--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_disconnected.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_disconnected.xml
@@ -3,8 +3,10 @@
     xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/fragment_margin"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="@dimen/fragment_padding" >
 
     <TextView
         android:id="@+id/txtFFLoginMessage"
