--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    
     android:id="@+id/step_home_linLay"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_marginTop="-60dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="@dimen/fragment_margin"
     android:gravity="center"
-    android:orientation="vertical" >
-    <RelativeLayout 
+    android:orientation="vertical"
+    android:padding="@dimen/fragment_padding" >
+
+    <RelativeLayout
         android:id="@+id/step_home_newrun"
-         
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content" 
-         android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
         <it.poli.android.scoutthisme.tools.CircleButton
             android:id="@+id/step_button_newrun"
@@ -23,22 +22,17 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:scaleType="centerInside"
-            
-            
-            app:cb_color="@color/btn_background"
-            android:src="@drawable/run_new" />
+            android:src="@drawable/run_new"
+            app:cb_color="@color/btn_background" />
 
         <TextView
             android:id="@+id/textView2"
+            style="@style/FragmentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:text="@string/stepcounter_newrun"
-            style="@style/FragmentTitle"
-            
-             />
-
+            android:text="@string/stepcounter_newrun" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -46,7 +40,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        
         android:orientation="horizontal" >
 
         <it.poli.android.scoutthisme.tools.CircleButton
@@ -57,19 +50,16 @@
             android:layout_alignParentTop="true"
             android:scaleType="centerInside"
             android:src="@drawable/photo_book"
-            app:cb_color="@color/btn_background"
-             />
+            app:cb_color="@color/btn_background" />
 
         <TextView
             android:id="@+id/alarm_txt_home"
+            style="@style/FragmentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:text="@string/stepcounter_seehistory"
-            style="@style/FragmentTitle"
-			 />
-
+            android:text="@string/stepcounter_seehistory" />
     </RelativeLayout>
 
 </LinearLayout>
