--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -9,6 +9,12 @@
     android:orientation="vertical"
     android:padding="@dimen/fragment_padding" >
 
+    <ImageView
+        android:id="@+id/step_counter_gigidag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bird_upupa" />
+
     <RelativeLayout
         android:id="@+id/step_home_newrun"
         android:layout_width="match_parent"
