--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    
+    tools:context="it.poli.android.scoutthisme.MainActivityWithIcons"
     android:id="@+id/step_home_linLay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +16,7 @@
         android:id="@+id/step_counter_gigidag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bird_upupa" />
+         />
 
     <RelativeLayout
         android:id="@+id/step_home_newrun"
