--- a/EclipseProg/Scouthis/res/layout/stepcounter_list_row.xml
+++ b/EclipseProg/Scouthis/res/layout/stepcounter_list_row.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/list_selector"
+     android:background="@drawable/wood_light"
     >
     <TextView 
         android:id="@+id/lst_step_date"
