--- a/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_newsfeed.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:id="@+id/newsfeedTopLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" >
 
@@ -18,7 +18,6 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:padding="0dp"
-            android:layout_margin="0dp"
             android:layout_marginRight="5dp" />
 
         <TextView
@@ -35,11 +34,10 @@
     <RelativeLayout
         android:id="@+id/newsfeedErrorLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/newsfeedTopLayout"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:paddingTop="80dp"
         android:layout_gravity="center"
         android:gravity="center" >
 
@@ -72,6 +70,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:layout_marginBottom="25dp"
             android:indeterminate="true" />
 
         <TextView
@@ -85,8 +84,7 @@
             android:lineSpacingMultiplier="0.8"
             android:paddingBottom="5dp"
             android:text="@string/news_rss_loading"
-            android:textSize="22sp"
-            android:textStyle="italic" />
+            android:textSize="22sp" />
     </RelativeLayout>
 
     <ListView
