--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
@@ -45,7 +45,7 @@
         android:layout_alignParentBottom="true" >
 
         <TextView
-            android:id="@+id/alarm_txt_home"
+            android:id="@+id/txtSeeHistory"
             style="@style/FragmentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
