--- a/EclipseProg/Scouthis/res/values/strings_fragments.xml
+++ b/EclipseProg/Scouthis/res/values/strings_fragments.xml
@@ -18,7 +18,7 @@
     <string name="fragments_5_title">Sveglie</string>
     
     <!-- Strings related to news fragment  -->
-    <string name="news_rss_loading">&#8230;Caricamento in corso&#8230;</string>
+    <string name="news_rss_loading">Caricamento in corso</string>
     <string name="news_rss_reload">Ricarica</string>   
     <string name="news_rss_information">Le ultime news sull\'Ambiente da corriere.it</string>
     <string name="news_rss_connection_error">Impossibile caricare il newsfeed.\nLa connessione dati non risulta attiva.</string>
@@ -39,7 +39,9 @@
     <!-- Strings related to stepcounter fragment  -->
     <string name="stepcounter_gohome">Torna al Contapassi</string>
     <string name="stepcounter_newrun">Nuova corsa</string>
+    <string name="stepcounter_newrun_description">Clicca sul bottone per iniziare subito un nuovo percorso</string>
     <string name="stepcounter_seehistory">Vedi storico</string>
+    <string name="stepcounter_seehistory_description">Cliccando sul bottone potrai rivedere tutti i percorsi già effettuati con le relative statitiche</string>
     <string name="stepcounter_statistic">Statistiche corsa</string>
     <string name="stepcounter_steps_done">Passi effettuati</string>
     <string name="stepcounter_distance_done">Distanza percorsa</string>
@@ -57,19 +59,18 @@
     <string name="findfriends_wellcome_name">Benvenuto</string>
     <string name="findfriends_login_button">Facebook Login</string>
     <string name="findfriends_status_gps_deactivated">&lt;b&gt;Stato:&lt;/b&gt; GPS non attivo.</string>  
+    <string name="findfriends_status_network_unavailable">&lt;b&gt;Stato:&lt;/b&gt; Rilevato problema di connessione.</string>
     <string name="findfriends_status_waiting_gps">&lt;b&gt;Stato:&lt;/b&gt; In attesa del GPS&#8230;</string>        
     <string name="findfriends_status_waiting_friends">&lt;b&gt;Stato:&lt;/b&gt; Ricezione lista degli amici&#8230;</string>
     <string name="findfriends_status_ready">&lt;b&gt;Stato:&lt;/b&gt; Connesso.</string>        
     
     <!--   Strings related to alarm fragment -->
-    
-    <string name="torna_alarm_home">Conferma Sveglia</string>
-    <string name="scegli_ora">A che ora?</string>
-    <string name="scegli_giorni">Quali giorni suonerà?</string>
-    <string name="scegli_uccello">Che uccello ti sveglierà?</string>
-    <string name="alarm_home">Le tue Sveglie</string>
-    <string name="click_for_add">Clicca sul Bottone per aggiungere una sveglia</string>
-    
+    <string name="alarms_confirm">Conferma Sveglia</string>
+    <string name="alarms_hour">A che ora?</string>
+    <string name="alarms_days">Quali giorni suonerà?</string>
+    <string name="alarms_birds">Che uccello ti sveglierà?</string>
+    <string name="alarms_home_title">Le tue sveglie</string>
+    <string name="alarms_home_title_description">Clicca sul bottone per aggiungere una nuova sveglia</string>
     
     <!-- Strings related to utility fragment  -->
     <string name="utility_camera_not_available">Fotocamera non rilevata.</string>
